--- a/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_kn.properties
+++ b/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_kn.properties
@@ -1,113 +1,109 @@
-#circuit-construction-kit-strings_kn.properties created Tue Nov 08 16:45:33 IST 2011 using: circuit-construction-kit 3.20.00 (53075), translation-utility 2.12.00 (57171) Oct 4, 2011
-#Tue Nov 08 16:45:33 IST 2011
-CCK3ControlPanel.HideElectronsCheckBox=\u0C8E\u0CB2\u0CC6\u0C95\u0CCD\u0C9F\u0CCD\u0CB0\u0CBE\u0CA8\u0CCD \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
-CCK3ControlPanel.NonContactAmmeterCheckBox=<html>\u0CB8\u0C82\u0CAA\u0CB0\u0CCD\u0C95\u0CB5\u0CBF\u0CB2\u0CCD\u0CB2\u0CA6<br>\u0C85\u0CAE\u0CCD\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD </html>
-CCK3ControlPanel.ChangeViewButton=200 \u0CAA\u0C9F\u0CCD\u0C9F\u0CC1 \u0CAC\u0CA6\u0CB2\u0CBF\u0CB8\u0CC1
-circuit-construction-kit-dc-virtual-lab.name=(DC) \u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD  \u0CAE\u0C82\u0CA1\u0CB2 \u0CB2\u0CCD\u0CAF\u0CBE\u0CAC\u0CCD
+#circuit-construction-kit-strings_kn.properties created Tue Feb 12 19:39:32 IST 2013 using: circuit-construction-kit 3.20.00 (53075), translation-utility 2.14.00 (69024) Oct 10, 2012
+#Tue Feb 12 19:39:32 IST 2013
+CCK3ControlPanel.HideElectronsCheckBox=\u0C8E\u0CB2\u0CC6\u0C95\u0CCD\u0C9F\u0CCD\u0CB0\u0CBE\u0CA8\u0CCD \u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1 
+CCK3ControlPanel.NonContactAmmeterCheckBox=<html>\u0CB8\u0C82\u0CAA\u0CB0\u0CCD\u0C95\u0CB5\u0CBF\u0CB2\u0CCD\u0CB2\u0CA6<br>Ammeter</html>
+CCK3ControlPanel.ChangeViewButton=200 \u0CAA\u0C9F\u0CCD\u0C9F\u0CC1
+circuit-construction-kit-dc-virtual-lab.name=(DC) \u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2  \u0CB2\u0CCD\u0CAF\u0CBE\u0CAC\u0CCD
 CircuitComponentInteractiveGraphic.RemoveMenuItem=\u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1\u0CB9\u0CBE\u0C95\u0CC1
-ComponentEditor.ResistorResistanceName=\u0CB0\u0CCB\u0CA7(\u0CB0\u0CC6\u0CB8\u0CBF\u0CB8\u0CCD\u0C9F\u0CC6\u0CA8\u0CCD\u0CB8\u0CCD )  
-BranchSource.Resistor=\u0CB0\u0CCB\u0CA7\u0C95\n(\u0CB0\u0CC6\u0CB8\u0CBF\u0CB8\u0CCD\u0C9F\u0CB0\u0CCD) 
+ComponentEditor.ResistorResistanceName=\u0CB0\u0CCB\u0CA7\u0C95\u0CA4\u0CC6 
+BranchSource.Resistor=\u0CB0\u0CCB\u0CA7\u0C95
 CCK3ControlPanel.MediumRadioButton=\u0CAE\u0CA7\u0CCD\u0CAF\u0CAE
 GrabBag.PencilLead=\u0CAA\u0CC6\u0CA8\u0CCD\u0CB8\u0CBF\u0CB2\u0CCD \u0CB2\u0CC6\u0CA1\u0CCD 
 CCK3ControlPanel.Enable=\u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1 >>
 add.voltage=\u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD \u0CA8\u0C95\u0CCD\u0CB7\u0CC6
-CCKHelp.ToolboxHelp=\u0CAC\u0CC7\u0C95\u0CBE\u0CA6 \u0CB8\u0CB2\u0C95\u0CB0\u0CA3\u0CC6\u0CAF\u0CA8\u0CCD\u0CA8\u0CC1 \u0C86\u0CAF\u0CCD\u0CA6\u0CC1\u0C95\u0CCB
+CCKHelp.ToolboxHelp=\u0CB8\u0CB2\u0C95\u0CB0\u0CA3\u0CC6\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0C86\u0CAF\u0CCD\u0C95\u0CC6 \u0CAE\u0CBE\u0CA1\u0CBF\u0C95\u0CCA 
 ComponentEditor.BulbResistanceTitle=\u0CAC\u0CB2\u0CCD\u0CAC\u0CCD
-edit.inductance=\u0CAA\u0CCD\u0CB0\u0CC7\u0CB0\u0C95\u0CA4\u0CC6(\u0C87\u0C82\u0CA1\u0C95\u0CCD\u0C9F\u0CA8\u0CCD\u0CB8\u0CCD) \u0CAC\u0CA6\u0CB2\u0CBF\u0CB8\u0CC1
-CCK3ControlPanel.JunctionEquations=\u0C9C\u0C82\u0C95\u0CCD\u0CB7\u0CA8\u0CCD \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1
-CircuitComponentInteractiveGraphic.ShowValueMenuItem=\u0CAE\u0CCC\u0CB2\u0CCD\u0CAF\u0CB5\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1 
+edit.inductance=\u0C86\u0CB5\u0CC7\u0CB6 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1
+CCK3ControlPanel.JunctionEquations=\u0CB8\u0C82\u0C97\u0CAE\u0CA6 \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1
+CircuitComponentInteractiveGraphic.ShowValueMenuItem=\u0CAE\u0CCC\u0CB2\u0CCD\u0CAF\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1 
 GrabBagButton.DialogTitle=\u0CAC\u0CCD\u0CAF\u0CBE\u0C97\u0CCD \u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1\u0C95\u0CCB
-edit.capacitance=\u0CA7\u0CBE\u0CB0\u0C95\u0CA4 \u0CAC\u0CA6\u0CB2\u0CBF\u0CB8\u0CC1
-CCK3ControlPanel.WireResistivitySliderMeasure=\u0CB0\u0CCB\u0CA7 / \u0C89\u0CA6\u0CCD\u0CA6
-VirtualAmmeter.HelpString2=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAA\u0CCD\u0CB0\u0CB5\u0CBE\u0CB9(\u0C95\u0CB0\u0CC6\u0C82\u0C9F\u0CCD) \u0C85\u0CB3\u0CC6\u0CAF\u0CB2\u0CC1
-VirtualAmmeter.HelpString1=\u0CA4\u0C82\u0CA4\u0CBF\u0CAF \u0CAE\u0CC7\u0CB2\u0CC6 \u0CB9\u0CB0\u0CBF\u0CA6\u0CBE\u0CA1\u0CC1
+edit.capacitance=\u0CA7\u0CBE\u0CB0\u0CBE\u0C95\u0CA4 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1
+CCK3ControlPanel.WireResistivitySliderMeasure=\u0CB0\u0CCB\u0CA7\u0C95\u0CA4\u0CC6 / \u0C89\u0CA6\u0CCD\u0CA6
+VirtualAmmeter.HelpString2=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0CBE\u0CAA\u0CA8 \u0CAE\u0CBE\u0CA1\u0CC1
+VirtualAmmeter.HelpString1=\u0CA4\u0C82\u0CA4\u0CBF\u0CAF \u0CAE\u0CC7\u0CB2\u0CC6 \u0C89\u0C9C\u0CCD\u0C9C\u0CC1 
 ComponentEditor.BatteryVoltageName=\u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD
 OptionsMenu.Title=\u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0C97\u0CB3\u0CC1
 CircuitComponentInteractiveGraphic.VoltageMenuItem=\u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1
-CircuitComponentInteractiveGraphic.FlipMenuItem=\u0CA4\u0CBF\u0CB0\u0CC1\u0CB5\u0CBF \u0CB9\u0CBE\u0C95\u0CC1
-discharge.inductor=\u0C87\u0C82\u0CA1\u0C95\u0CCD\u0C9F\u0CB0\u0CCD \u0CA1\u0CBF\u0CB8\u0CCD\u0C9A\u0CBE\u0CB0\u0CCD\u0C9C\u0CCD \u0CAE\u0CBE\u0CA1\u0CC1
-CircuitComponentInteractiveGraphic.RightConnectMenuItem=\u0C9C\u0CCB\u0CA1\u0CA3\u0CBF \u0CAC\u0CB2\u0C95\u0CCD\u0C95\u0CC6 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
+CircuitComponentInteractiveGraphic.FlipMenuItem=\u0CAE\u0C97\u0CC1\u0C9A\u0CC1
+discharge.inductor=\u0C86\u0CB5\u0CC7\u0CB6 \u0CB5\u0CBF\u0CB8\u0CB0\u0CCD\u0C9C\u0CBF\u0CB8\u0CC1
+CircuitComponentInteractiveGraphic.RightConnectMenuItem=\u0C9C\u0CCB\u0CA1\u0CA8\u0CC6\u0CAF\u0CA8\u0CCD\u0CA8\u0CC1 \u0CAC\u0CB2\u0C95\u0CCD\u0C95\u0CC6 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
 BranchSource.LightBulb=\u0CAC\u0CB2\u0CCD\u0CAC\u0CCD
-BranchSource.Capacitor=\u0CA7\u0CBE\u0CB0\u0C95\n(\u0C95\u0CC6\u0CAA\u0CBE\u0CB8\u0CBF\u0C9F\u0CB0\u0CCD)
-ConstantDensityPropagator.SpeedLimitReached1=\u0C85\u0CA8\u0CBF\u0CAE\u0CC7\u0CB7\u0CA8\u0CCD \u0CB5\u0CC7\u0C97 \u0CAE\u0CBF\u0CA4\u0CBF\! \u0CB8\u0CBF\u0CAE\u0CC1\u0CB2\u0CC7\u0CB7\u0CA8\u0CCD \u0CB5\u0CC7\u0C97\: 
-circuit-construction-kit-ac.name=(AC+DC) \u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2 \u0CAA\u0CC6\u0C9F\u0CCD\u0C9F\u0CBF
-CCK3ControlPanel.WireResistivitySlider=\u0CA4\u0C82\u0CA4\u0CBF\u0CAF \u0CB0\u0CCB\u0CA7
-BranchSource.Inductor=\u0CAA\u0CCD\u0CB0\u0CC7\u0CB0\u0C95\n(\u0C87\u0C82\u0CA1\u0C95\u0CCD\u0C9F\u0CB0\u0CCD)
-change-frequency=\u0C95\u0C82\u0CAA\u0CA8\u0CBE\u0C82\u0C95(\u0CAB\u0CCD\u0CB0\u0CC0\u0C95\u0CCD\u0CB5\u0CC6\u0CA8\u0CCD\u0CB8\u0CBF) \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1
-GrabBag.DollarBill=\u0CA8\u0CCB\u0C9F\u0CC1
-ComponentEditor.BulbResistanceName=\u0CB0\u0CCB\u0CA7(\u0CB0\u0CC6\u0CB8\u0CBF\u0CB8\u0CCD\u0C9F\u0CC6\u0CA8\u0CCD\u0CB8\u0CCD )  
-CCK3Module.GrabAWire=\u0CA4\u0C82\u0CA4\u0CBF\u0CAF\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1\u0C95\u0CCB
-BranchSource.AC=AC \u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD
-JunctionSplitter.SplitMenuItem=\u0CAC\u0CC7\u0CB0\u0CCD\u0CAA\u0CA1\u0CBF\u0CB8\u0CC1
-CCK3ControlPanel.FilePanelBorder=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD\u200C \u0CAE\u0C82\u0CA1\u0CB2(\u0CB8\u0CB0\u0CCD\u0C95\u0CCD\u0CAF\u0CC2\u0C9F\u0CCD)
+BranchSource.Capacitor=\u0CA7\u0CBE\u0CB0\u0C95
+ConstantDensityPropagator.SpeedLimitReached1=\u0C85\u0CA8\u0CBF\u0CAE\u0CC7\u0CB7\u0CA8\u0CCD \u0CB5\u0CC7\u0C97 \u0CAE\u0CBF\u0CA4\u0CBF \u0CAE\u0CC0\u0CB0\u0CBF\u0CA4\u0CC1 \!  
+circuit-construction-kit-ac.name=(AC+DC) \u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2 \u0CB0\u0C9A\u0CA8\u0CBE \u0CAA\u0CC6\u0C9F\u0CCD\u0C9F\u0CBF 
+CCK3ControlPanel.WireResistivitySlider=\u0CA4\u0C82\u0CA4\u0CBF\u0CAF \u0CB0\u0CCB\u0CA7\u0C95\u0CA4\u0CC6 
+BranchSource.Inductor=\u0CAA\u0CCD\u0CB0\u0CC7\u0CB0\u0C95 
+change-frequency=\u0C95\u0C82\u0CAA\u0CA8\u0CBE\u0C82\u0C95  \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1
+ComponentEditor.BulbResistanceName=\u0CB0\u0CCB\u0CA7\u0C95\u0CA4\u0CC6 
+GrabBag.DollarBill=\u0CA8\u0CCB\u0C9F\u0CC1 
+CCK3Module.GrabAWire=\u0CA4\u0C82\u0CA4\u0CBF \u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1\u0C95\u0CCA 
+BranchSource.AC=AC \u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CC1
+JunctionSplitter.SplitMenuItem=\u0CB8\u0CC0\u0CB3\u0CC1 \u0CAC\u0C82\u0CA7\u0C95 
+CCK3ControlPanel.FilePanelBorder=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD\u200C \u0CAE\u0C82\u0CA1\u0CB2 
 GrabBagButton.ButtonTitle=\u0CAC\u0CCD\u0CAF\u0CBE\u0C97\u0CCD \u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1\u0C95\u0CCB
-ComponentEditor.ACFrequency=AC \u0C95\u0C82\u0CAA\u0CA8\u0CBE\u0C82\u0C95
+ComponentEditor.ACFrequency=AC \u0C95\u0C82\u0CAA\u0CA8\u0CBE\u0C82\u0C95 
 CCK3ControlPanel.HideValuesCheckBox=\u0CAE\u0CCC\u0CB2\u0CCD\u0CAF\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
 GrabBag.PaperClip=\u0CAA\u0CC7\u0CAA\u0CB0\u0CCD \u0C95\u0CCD\u0CB2\u0CBF\u0CAA\u0CCD\u0CAA\u0CC1
 CCK3ControlPanel.LotsLabel=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CBF\u0CA8
 GrabBag.Penny=\u0CA8\u0CBE\u0CA3\u0CCD\u0CAF
-CCKHelp.ComponentHelp=\u0C9A\u0CB2\u0CBF\u0CB8\u0CB2\u0CC1 \u0C8E\u0CB3\u0CC6\u0CAF\u0CBF\u0CB0\u0CBF. \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CB8\u0CB2\u0CC1 \u0C85\u0CA5\u0CB5 \u0CA4\u0CC6\u0C97\u0CC6\u0CAF\u0CB2\u0CC1 \u0CB0\u0CC8\u0C9F\u0CCD \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CBF
-discharge.capacitor=\u0C95\u0CC6\u0CAA\u0CBE\u0CB8\u0CBF\u0C9F\u0CB0\u0CCD \u0CA1\u0CBF\u0CB8\u0CCD\u0C9A\u0CBE\u0CB0\u0CCD\u0C9C\u0CCD \u0CAE\u0CBE\u0CA1\u0CC1
+CCKHelp.ComponentHelp=\u0C9A\u0CB2\u0CBF\u0CB8\u0CB2\u0CC1 \u0C8E\u0CB3\u0CC6\u0CAF\u0CBF\u0CB0\u0CBF \u0C85\u0CA5\u0CB5 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CB8\u0CB2\u0CC1 \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CBF
+discharge.capacitor=\u0CA7\u0CBE\u0CB0\u0CBE\u0C95\u0CA4\u0CC6 \u0CB5\u0CBF\u0CB8\u0CB0\u0CCD\u0C9C\u0CBF\u0CB8\u0CC1
 add.current.chart=\u0C95\u0CB0\u0CC6\u0C82\u0C9F\u0CCD \u0CA8\u0C95\u0CCD\u0CB7\u0CC6
 ComponentEditor.BatteryVoltageTitle=\u0CAC\u0CCD\u0CAF\u0CBE\u0C9F\u0CB0\u0CBF
 CCK3ControlPanel.ToolsPanelBorder=\u0CB8\u0CB2\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1
-CCKHelp.right-click-help=\u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0C97\u0CB3\u0CBF\u0C97\u0CC6 \u0CB0\u0CC8\u0C9F\u0CCD  \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CC1
-CCK3ControlPanel.LoopEquations=\u0C86\u0CB5\u0CB0\u0CCD\u0CA4 \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1
-capacitance=\u0CA7\u0CBE\u0CB0\u0C95\u0CA4\u0CC6(\u0C95\u0CC6\u0CAA\u0CBE\u0CB8\u0CBF\u0C9F\u0CA8\u0CCD\u0CB8\u0CCD)
+CCKHelp.right-click-help=\u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0C97\u0CB3\u0CBF\u0C97\u0CC6 \u0CAC\u0CB2 \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD 
+CCK3ControlPanel.LoopEquations=\u0C86\u0CB5\u0CB0\u0CCD\u0CA4\u0CA8 \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1 
+capacitance=\u0CA7\u0CBE\u0CB0\u0C95\u0CA4\u0CC6
 OptionsMenu.ToolboxColorDialogTitle=\u0CB8\u0CB2\u0C95\u0CB0\u0CA3 \u0CAA\u0CC6\u0C9F\u0CCD\u0C9F\u0CBF\u0C97\u0CC6 \u0CAC\u0CA3\u0CCD\u0CA3
-ComponentEditor.ResistorResistanceTitle=\u0CB0\u0CCB\u0CA7\u0C95(\u0CB0\u0CC6\u0CB8\u0CBF\u0CB8\u0CCD\u0C9F\u0CB0\u0CCD )  
-CCK3ControlPanel.AmmeterCheckBox=\u0C85\u0CAE\u0CCD\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD (s)
+ComponentEditor.ResistorResistanceTitle=\u0CB0\u0CCB\u0CA7\u0C95
 BranchSource.Wire=\u0CA4\u0C82\u0CA4\u0CBF
 CCK3ControlPanel.GIFHelpButton=GIF \u0CB8\u0CB9\u0CBE\u0CAF 
-CCK3ControlPanel.SaveButton=\u0C89\u0CB3\u0CBF\u0CB8\u0CC1
-BranchSource.Ammeter=\u0C85\u0CAE\u0CCD\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD
+BranchSource.Ammeter=\u0C85\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD 
 CCK3ControlPanel.OhmsLawEquations=\u0C93\u200C\u0CAE\u0CCD\u200C\u0CA8 \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3
-CCK3ControlPanel.LIfelikeRadioButton=\u0CA8\u0CBF\u0C9C\u0CB5\u0CBE\u0C97\u0CBF \u0C87\u0CA6\u0CCD\u0CA6\u0C82\u0CA4\u0CC6
 time=\u0CB8\u0CAE\u0CAF 
-CCK3ControlPanel.SchematicRadioButton=\u0CB0\u0CC7\u0C96\u0CBE \u0C9A\u0CBF\u0CA4\u0CCD\u0CB0
+CCK3ControlPanel.SchematicRadioButton=\u0CB0\u0CC7\u0C96\u0CBE\u0C9A\u0CBF\u0CA4\u0CCD\u0CB0
 ComponentEditor.DoneButton=\u0C86\u0CAF\u0CBF\u0CA4\u0CC1
-OptionsMenu.BackgroundColorDialogTitle=\u0CB9\u0CBF\u0C82\u0CAD\u0CBE\u0C97\u0CA6 \u0CAC\u0CA3\u0CCD\u0CA3
-CCK3ControlPanel.AdvancedControlsDialog=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CBF\u0CA8 \u0CA8\u0CBF\u0CAF\u0C82\u0CA4\u0CCD\u0CB0\u0C95\u0C97\u0CB3\u0CC1
-CircuitComponentInteractiveGraphic.ResistanceMenuItem=\u0CB0\u0CCB\u0CA7 \u0CAC\u0CA6\u0CB2\u0CBF\u0CB8\u0CC1
-CCK3ControlPanel.VoltmeterCheckBox=\u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CBE\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD 
+OptionsMenu.BackgroundColorDialogTitle=\u0CB9\u0CBF\u0C82\u0CAC\u0CA6\u0CBF \u0CAC\u0CA3\u0CCD\u0CA3
+CCK3ControlPanel.AdvancedControlsDialog=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CBF\u0CA8 \u0CA8\u0CBF\u0CAF\u0C82\u0CA4\u0CCD\u0CB0\u0C95\u0C97\u0CB3\u0CC1 
+CircuitComponentInteractiveGraphic.ResistanceMenuItem=\u0CB0\u0CCB\u0CA7\u0C95\u0CA4\u0CC6 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1 
+CCK3ControlPanel.VoltmeterCheckBox=\u0CB5\u0CCB\u0CB2\u0CCD\u0C9F \u0CAE\u0CC0\u0C9F\u0CB0\u0CCD 
 CircuitComponentInteractiveGraphic.ReverseMenuItem=\u0CA4\u0CBF\u0CB0\u0CBF\u0CB5\u0CBF \u0CB9\u0CBE\u0C95\u0CC1
 OptionsMenu.ToolboxcolorMenuItem=\u0CB8\u0CB2\u0C95\u0CB0\u0CA3 \u0CAA\u0CC6\u0C9F\u0CCD\u0C9F\u0CBF\u0C97\u0CC6 \u0CAC\u0CA3\u0CCD\u0CA3
-CCK3ControlPanel.ErrorLoadingHelpDialog=\u0C8E\u0CB2\u0CCD\u0CB2\u0CCB \u0CA6\u0CCB\u0CB7 \u0C89\u0C82\u0C9F\u0CBE\u0C97\u0CBF\u0CA6\u0CC6
-stopwatch=\u0C97\u0CA1\u0CBF\u0CAF\u0CBE\u0CB0
+CCK3ControlPanel.ErrorLoadingHelpDialog=\u0CB8\u0CB9\u0CBE\u0CAF \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CB2\u0CBE\u0C97\u0CBF\u0CB2\u0CCD\u0CB2
+stopwatch=\u0C95\u0CC8\u0C97\u0CA1\u0CBF\u0CAF\u0CBE\u0CB0
 GrabBag.Hand=\u0C95\u0CC8
-CCK3ControlPanel.LocalHelpButton=\u0CB8\u0CB9\u0CBE\u0CAF
+CCK3ControlPanel.LocalHelpButton=\u0CB8\u0CCD\u0CA5\u0CB3\u0CC0\u0CAF \u0CB8\u0CB9\u0CBE\u0CAF
 CCK3ControlPanel.ShowValuesCheckBox=\u0CAE\u0CCC\u0CB2\u0CCD\u0CAF\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
 CCK3ControlPanel.SmallRadioButton=\u0C9A\u0CBF\u0C95\u0CCD\u0C95
 CircuitComponentInteractiveGraphic.LeftConnectMenuItem=\u0C9C\u0CCB\u0CA1\u0CA3\u0CBF \u0C8E\u0CA1\u0C95\u0CCD\u0C95\u0CC6 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
+translation.credits=<html>\u0CB0\u0CBE\u0CAE\u0C95\u0CC3\u0CB7\u0CCD\u0CA3 \u0CAE\u0CBF\u0CB7\u0CA8\u0CCD , \u0CB6\u0CBF\u0CB5\u0CA8\u0CB9\u0CB3\u0CCD\u0CB3\u0CBF, www.rkmission-shivanahalli.org</html>
 ac.voltage.source.editor=AC \u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD \u0CAE\u0CC2\u0CB2 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1
-CCKHelp.right-click-help-mac=\u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0C97\u0CB3\u0CBF\u0C97\u0CC6  Ctrl + \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CC1
+CCKHelp.right-click-help-mac=Ctrl + \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CC1
 reset.dynamics=\u0CAE\u0CCA\u0CA6\u0CB2\u0CBF\u0CA8\u0CBF\u0C82\u0CA6
-CCK3ControlPanel.CircuitEquationsFrame=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2\u0CA6 \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1
-ComponentEditor.BatteryResistanceName=\u0C92\u0CB3 \u0CB0\u0CCB\u0CA7
-CCK3ControlPanel.CloseButton=\u0CAE\u0CC1\u0C9A\u0CCD\u0C9A\u0CC1
-CCK3ControlPanel.LoadButton=\u0CAE\u0C82\u0CA1\u0CB2\u0CB5\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CC6\u0CB0\u0CC6
-CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=\u0C92\u0CB3 \u0CB0\u0CCB\u0CA7\u0CB5\u0CA8\u0CCD\u0CA8\u0CC1 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1 
-current-y-axis=\u0C95\u0CB0\u0CC6\u0C82\u0C9F\u0CCD (Amps)
-circuit-construction-kit-dc.name=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2 \u0CAA\u0CC6\u0C9F\u0CCD\u0C9F\u0CBF
-BranchSource.Battery=\u0CAC\u0CCD\u0CAF\u0CBE\u0C9F\u0CB0\u0CBF
-CCK3ControlPanel.VisualPanelBorder=\u0C97\u0CCB\u0C9A\u0CB0\u0CBF\u0CB8\u0CC1
-SeriesAmmeterGraphic.Ammeter=\u0C85\u0CAE\u0CCD\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD
-OptionsMenu.BackgroundColorMenuItem=\u0CB9\u0CBF\u0C82\u0CAD\u0CBE\u0C97\u0CA6 \u0CAC\u0CA3\u0CCD\u0CA3
-CCK3ControlPanel.AdvancedPanelBorder=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CBF\u0CA8 .. 
+CCK3ControlPanel.CircuitEquationsFrame=\u0CAE\u0C82\u0CA1\u0CB2\u0CA6  \u0CB8\u0CAE\u0CC0\u0C95\u0CB0\u0CA3\u0C97\u0CB3\u0CC1
+ComponentEditor.BatteryResistanceName=\u0C92\u0CB3 \u0CB0\u0CCB\u0CA7\u0C95\u0CA4
+CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=\u0C92\u0CB3\u0C97\u0CA1\u0CC6\u0CAF \u0CB0\u0CCB\u0CA7\u0C95\u0CA4\u0CC6 \u0CAC\u0CA6\u0CB2\u0CBE\u0CAF\u0CBF\u0CB8\u0CC1 
+current-y-axis=\u0C95\u0CB0\u0CC6\u0C82\u0C9F\u0CCD
+circuit-construction-kit-dc.name=\u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2 \u0CAE\u0CBE\u0CA1\u0CC1 
+BranchSource.Battery=\u0CAC\u0CCD\u0CAF\u0CBE\u0C9F\u0CB0\u0CBF 
+CCK3ControlPanel.VisualPanelBorder=\u0C97\u0CCB\u0C9A\u0CB0\u0CB5\u0CBE\u0C97\u0CB2\u0CBF
+SeriesAmmeterGraphic.Ammeter=\u0C86\u0CAE\u0CC0\u0C9F\u0CB0\u0CCD 
+OptionsMenu.BackgroundColorMenuItem=\u0CB9\u0CBF\u0C82\u0CAC\u0CA6\u0CBF \u0CAC\u0CA3\u0CCD\u0CA3
+CCK3ControlPanel.AdvancedPanelBorder=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CBF\u0CA8...
 CCK3ControlPanel.SizePanelBorder=\u0C97\u0CBE\u0CA4\u0CCD\u0CB0
 GrabBagButton.Help=\u0CAE\u0CC1\u0C82\u0CA6\u0CC6
 voltage-y-axis=\u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD (V)
 CCK3ControlPanel.Disable=\u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1<< 
 BranchSource.Switch=\u0CB8\u0CCD\u0CB5\u0CBF\u0C9A\u0CCD
 CCK3ControlPanel.LargeRadioButton=\u0CA6\u0CCA\u0CA1\u0CCD\u0CA1
-circuit-construction-kit-ac-virtual-lab.name=(AC+DC) \u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2 \u0CB2\u0CCD\u0CAF\u0CBE\u0CAC\u0CCD (\u0CB8\u0CB0\u0CCD\u0C95\u0CCD\u0CAF\u0CC2\u0C9F\u0CCD \u0CB2\u0CCD\u0CAF\u0CBE\u0CAC\u0CCD)
+circuit-construction-kit-ac-virtual-lab.name=(AC+DC) \u0CB5\u0CBF\u0CA6\u0CCD\u0CAF\u0CC1\u0CA4\u0CCD \u0CAE\u0C82\u0CA1\u0CB2  \u0CB2\u0CCD\u0CAF\u0CBE\u0CAC\u0CCD
 CCK3ControlPanel.AlmostNoneLabel=\u0C8F\u0CA8\u0CC1 \u0C87\u0CB2\u0CCD\u0CB2\u0CA6 
 ComponentEditor.BatteryResistanceTitle=\u0CAC\u0CCD\u0CAF\u0CBE\u0C9F\u0CB0\u0CBF
-WarningMessages.PossibleError=\u0C8E\u0C9A\u0CCD\u0C9A\u0CB0\u0CBF\u0C95\u0CC6\: \u0CB9\u0CB2\u0CB5\u0CC1 \u0CAE\u0CCC\u0CB2\u0CCD\u0CAF\u0C97\u0CB3\u0CC1 \u0C96\u0C9A\u0CBF\u0CA4\u0CB5\u0CB2\u0CCD\u0CB2
-CCKHelp.JunctionHelp=\u0CB8\u0C82\u0CA7\u0CBF\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0C8E\u0CB3\u0CC6 \u0C85\u0CA5\u0CB5 \u0CAE\u0CC6\u0CA8\u0CC1\u0C97\u0CBE\u0C97\u0CBF \u0CB0\u0CC8\u0C9F\u0CCD  \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CBF
-ComponentEditor.Frequency=\u0C95\u0C82\u0CAA\u0CA8\u0CBE\u0C82\u0C95(\u0CAB\u0CCD\u0CB0\u0CC0\u0C95\u0CCD\u0CB5\u0CC6\u0CA8\u0CCD\u0CB8\u0CBF)
-GrabBag.Eraser=\u0CB0\u0CAC\u0CCD\u0CAC\u0CB0\u0CCD
-inductance=\u0CAA\u0CCD\u0CB0\u0CC7\u0CB0\u0C95\u0CA4\u0CC6(\u0C87\u0C82\u0CA1\u0C95\u0CCD\u0C9F\u0CA8\u0CCD\u0CB8\u0CCD) 
+WarningMessages.PossibleError=\u0C8E\u0C9A\u0CCD\u0C9A\u0CB0\u0CBF\u0C95\u0CC6\: \u0CB9\u0CB2\u0CB5\u0CC1 \u0CAE\u0CCC\u0CB2\u0CCD\u0CAF\u0C97\u0CB3\u0CC1 \u0CA8\u0CBF\u0C97\u0CA7\u0CBF\u0CA4\u0CB5\u0CBE\u0C97\u0CBF\u0CB2\u0CCD\u0CB2
+CCKHelp.JunctionHelp=\u0CB8\u0C82\u0C97\u0CAE\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0C8E\u0CB3\u0CC6\u0CAF\u0CBF\u0CB0\u0CBF \u0C85\u0CA5\u0CB5 \u0CAC\u0CBE\u0CB2 \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD \u0CAE\u0CBE\u0CA1\u0CBF
+ComponentEditor.Frequency=\u0C95\u0C82\u0CAA\u0CA8
+GrabBag.Eraser=\u0C85\u0CB3\u0CBF\u0CB8\u0CC1\u0CB5 \u0CB0\u0CAC\u0CCD\u0CAC\u0CB0\u0CCD
+inductance=\u0C86\u0CB5\u0CC7\u0CB6
 InteractiveBranchGraphic.RemoveMenuItem=\u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1 \u0CB9\u0CBE\u0C95\u0CC1
 ComponentEditor.MoreVoltsCheckBox=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CC1 \u0CB5\u0CCB\u0CB2\u0CCD\u0C9F\u0CC7\u0C9C\u0CCD
 time.sec=\u0CB8\u0CAE\u0CAF (s)
