--- a/simulations-java/simulations/energy-skate-park/data/energy-skate-park/localization/energy-skate-park-strings_kn.properties
+++ b/simulations-java/simulations/energy-skate-park/data/energy-skate-park/localization/energy-skate-park-strings_kn.properties
@@ -1,80 +1,80 @@
-#energy-skate-park-strings_kn.properties created Tue Nov 08 19:54:11 IST 2011 using: energy-skate-park 2.08.00 (53070), translation-utility 2.12.00 (57171) Oct 4, 2011
-#Tue Nov 08 19:54:11 IST 2011
-properties.position=\u0CB8\u0CCD\u0CA5\u0CBE\u0CA8
+#energy-skate-park-strings_kn.properties created Wed Feb 13 10:31:38 IST 2013 using: energy-skate-park 2.08.00 (53070), translation-utility 2.14.00 (69024) Oct 10, 2012
+#Wed Feb 13 10:31:38 IST 2013
+properties.position=\u0CB8\u0CCD\u0CA5\u0CB3
 properties.speed=\u0CB5\u0CC7\u0C97
-controls.show-friction=\u0CA6\u0CBE\u0CB0\u0CBF\u0CAF \u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6(\u0CAB\u0CCD\u0CB0\u0CC0\u0C95\u0CCD\u0CB7\u0CA8\u0CCD)
+controls.show-friction=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6\u0CAF \u0C9C\u0CBE\u0CA1\u0CC1 \u0CB9\u0CBF\u0CA1\u0CBF
 controls.path=\u0CB9\u0CBE\u0CA6\u0CBF
 controls.mass=\u0CA6\u0CCD\u0CB0\u0CB5\u0CCD\u0CAF\u0CB0\u0CBE\u0CB6\u0CBF
-plots.energy-vs-time=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF vs. \u0C95\u0CBE\u0CB2
-controls.skater.restore-defaults=\u0C8E\u0CB2\u0CCD\u0CB2\u0CB5\u0CC2 \u0CAE\u0CCA\u0CA6\u0CB2\u0CBF\u0CA8\u0C82\u0CA4\u0CC6 \u0CAE\u0CBE\u0CA1\u0CC1
-controls.clear-heat=\u0C89\u0CB7\u0CCD\u0CA3\u0CB5\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CC6\u0C97\u0CC6
+plots.energy-vs-time=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF vs. \u0CB8\u0CAE\u0CAF
+controls.skater.restore-defaults=\u0C8E\u0CB2\u0CCD\u0CB2\u0CB5\u0CC2 \u0CAE\u0CCA\u0CA6\u0CB2\u0CBF\u0CA8\u0C82\u0CA4\u0CC6
+controls.clear-heat=\u0C89\u0CB7\u0CCD\u0CA3 \u0CA4\u0CC6\u0C97\u0CC6
 plots.plot=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF\u0CAF \u0CA8\u0C95\u0CCD\u0CB7\u0CC6
 skater.ball=\u0C9A\u0CC6\u0C82\u0CA1\u0CC1
-controls.delete-point=\u0CA8\u0CBF\u0CAF\u0C82\u0CA4\u0CCD\u0CB0\u0CA3 \u0C9A\u0CC1\u0C95\u0CCD\u0C95\u0CBF\u0CAF\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CC6\u0C97\u0CC6 
-energy.thermal=\u0CB6\u0CBE\u0C96(\u0CA5\u0CB0\u0CCD\u0CAE\u0CB2\u0CCD)
+controls.delete-point=\u0CB9\u0CBF\u0CA1\u0CBF\u0CA4\u0C97\u0CB3\u0CA8\u0CCD\u0CA8\u0CC1 \u0CA4\u0CC6\u0C97\u0CC6
+energy.thermal=\u0CB6\u0CBE\u0C96\u0CA6
 energy.total=\u0C92\u0C9F\u0CCD\u0C9F\u0CC1
-time.resume=\u0CAE\u0CA4\u0CCD\u0CA4\u0CC6 \u0CB6\u0CC1\u0CB0\u0CC1\u0CAE\u0CBE\u0CA1\u0CC1
+time.resume=\u0CAA\u0CC1\u0CA8\u0CB0\u0CBE\u0CB0\u0C82\u0CAD\u0CBF\u0CB8\u0CC1
 controls.record-path=\u0CB9\u0CBE\u0CA6\u0CBF \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
-plots.bar-graph=\u0C95\u0C82\u0CAC \u0CA8\u0C95\u0CCD\u0CB7\u0CC6 (\u0CAC\u0CBE\u0CB0\u0CCD \u0C97\u0CCD\u0CB0\u0CBE\u0CAB\u0CCD) 
-tracks-menu.item.friction-parabola=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6\u0CAF \u0CAA\u0CB0\u0CBE\u0CB5\u0CB2\u0CAF (\u0CAA\u0CBE\u0CB0\u0CBE\u0CAC\u0CCB\u0CB2)
-plots.energy-vs-position=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF vs. \u0CB8\u0CCD\u0CA5\u0CBE\u0CA8
+plots.bar-graph=\u0CB8\u0CCD\u0CA4\u0C82\u0CAC \u0CA8\u0C95\u0CCD\u0CB7\u0CC6
+tracks-menu.item.friction-parabola=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6\u0CAF \u0CA8\u0C95\u0CCD\u0CB7\u0CC6
+plots.energy-vs-position=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF vs. \u0CB8\u0CCD\u0CA5\u0CB3 
 plots.energy-vs-time.time=\u0CB8\u0CAE\u0CAF (sec)
-location.earth=\u0CAD\u0CC2\u0CAE\u0CBF(\u0C85\u0CB0\u0CCD\u0CA5\u0CCD)
+location.earth=\u0CAD\u0CC2\u0CAE\u0CBF
 piechart.show-thermal=\u0C89\u0CB7\u0CCD\u0CA3\u0CA6 \u0C9C\u0CCA\u0CA4\u0CC6\u0C97\u0CC6
 controls.skater.stickiness=\u0C85\u0C82\u0C9F\u0CBF\u0C95\u0CCA\u0CB3\u0CCD\u0CB3\u0CC1\u0CB5\u0CBF\u0C95\u0CC6
-skater.star-skater=\u0CAE\u0CB9\u0CBF\u0CB3\u0CBE \u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD
+skater.star-skater=\u0CB8\u0CCD\u0C9F\u0CBE\u0CB0\u0CCD \u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD
 properties.energy=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF (J)
 energy-skate-park.name=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF-\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CCD \u0C89\u0CA6\u0CCD\u0CAF\u0CBE\u0CA8\u0CB5\u0CA8
-controls.show-grid=\u0C9A\u0CCC\u0C95\u0C9C\u0CBE\u0CB2(\u0C97\u0CCD\u0CB0\u0CBF\u0CA1\u0CCD) \u0CB9\u0CBE\u0C95\u0CC1
+controls.show-grid=\u0C9C\u0CBE\u0CB2\u0CB0 \u0CB9\u0CBE\u0C95\u0CC1
 tracks-menu.title=\u0CB9\u0CBE\u0CA6\u0CBF
-location.space=\u0C85\u0C82\u0CA4\u0CB0\u0CBF\u0C95\u0CCD\u0CB7 (\u0CB8\u0CCD\u0CAA\u0CC7\u0CB8\u0CCD)
+location.space=\u0C85\u0C82\u0CA4\u0CB0\u0CBF\u0C95\u0CCD\u0CB7 
 time.clear=\u0C85\u0CB3\u0CBF\u0CB8\u0CC1 
-controls.show-background=\u0CB9\u0CBF\u0C82\u0CAD\u0CBE\u0C97 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
+controls.show-background=\u0CB9\u0CBF\u0C82\u0CAC\u0CA6\u0CBF \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1
 help.grab-a-track=\u0CB9\u0CBE\u0CA6\u0CBF \u0CB9\u0CBE\u0C95\u0CC1
 plots.energy-vs-time.energy=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF (Joules)
 file-menu.save=\u0C89\u0CB3\u0CBF\u0CB8\u0CC1
-controls.reset=\u0CAA\u0CC1\u0CA8\u0CB0\u0CBE\u0CB0\u0C82\u0CAD\u0CBF\u0CB8\u0CC1
-tracks-menu.item.double-well=\u0CA6\u0CCD\u0CB5\u0CBF\u0CAC\u0CBE\u0CB5\u0CBF 
+controls.reset=\u0CAE\u0CCA\u0CA6\u0CB2\u0CBF\u0CA8\u0CBF\u0C82\u0CA6
+tracks-menu.item.double-well=\u0C86\u0CB3\u0CA6 \u0CAC\u0CBE\u0CB5\u0CBF
 controls.gravity.lots=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CA8 
-location.moon=\u0C9A\u0C82\u0CA6\u0CCD\u0CB0(\u0CAE\u0CC2\u0CA8\u0CCD)
-message.confirm-reset=\u0CAE\u0CCA\u0CA6\u0CB2\u0CBF\u0CA8\u0C82\u0CA4\u0CC6 \u0CAE\u0CBE\u0CA1\u0CAC\u0CC7\u0C95\u0CC6?? 
+location.moon=\u0C9A\u0C82\u0CA6\u0CCD\u0CB0
+message.confirm-reset=\u0CAE\u0CA4\u0CCD\u0CA4\u0CC6 \u0CB6\u0CC1\u0CB0\u0CC1 \u0CAE\u0CBE\u0CA1\u0CB2\u0CC7? 
 skater.bug=\u0CB9\u0CC1\u0CB3
-energy.kinetic=\u0C9A\u0CB2\u0CA8(\u0C95\u0CC8\u0CA8\u0CC6\u0C9F\u0CBF\u0C95\u0CCD)
+energy.kinetic=\u0C9A\u0CB2\u0CA8
 energy.total.energy=\u0C92\u0C9F\u0CCD\u0C9F\u0CC1 \u0CB6\u0C95\u0CCD\u0CA4\u0CBF
-track.roller-coaster-mode=\u0CB0\u0CCB\u0CB2\u0CB0\u0CCD \u0C95\u0CCB\u0CB8\u0CCD\u0C9F\u0CB0\u0CCD 
-energy.potential=\u0CAA\u0CCD\u0CB0\u0C9A\u0CCD\u0C9B\u0CA8\u0CCD\u0CA8(\u0CAA\u0CCA\u0C9F\u0CC6\u0C82\u0CB6\u0CBF\u0CAF\u0CB2\u0CCD)
+energy.potential=\u0CAA\u0CCD\u0CB0\u0C9A\u0CCD\u0C9B\u0CA8\u0CCD\u0CA8
 invitaiton.arrow-keys=<html>\u0CAC\u0CB2 \u0CB9\u0CBE\u0C95\u0CB2\u0CC1 <br>\u0CAC\u0CBE\u0CA3\u0CA6 \u0C95\u0CC0 \u0C92\u0CA4\u0CCD\u0CA4\u0CBF <html>
 controls.gravity.none=\u0C8F\u0CA8\u0CC2 \u0C87\u0CB2\u0CCD\u0CB2\u0CA6
-file-menu.open=\u0CA4\u0CC6\u0C97\u0CC6
-plots.copy=\u0CA8\u0C95\u0CB2\u0CC1(\u0C95\u0CBE\u0CAA\u0CBF) \u0CAE\u0CBE\u0CA1\u0CC1
-controls.hide-skater-properties=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0CA8 \u0C97\u0CC1\u0CA3 \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
-energy.thermal.energy=\u0CB6\u0CBE\u0C96 \u0CB6\u0C95\u0CCD\u0CA4\u0CBF
+file-menu.open=\u0CA4\u0CC6\u0CB0\u0CC6
+plots.copy=\u0C95\u0CBE\u0CAA\u0CBF \u0CAE\u0CBE\u0CA1\u0CC1
+controls.hide-skater-properties=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0C97\u0CC1\u0CA3 \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
+energy.thermal.energy=\u0CB6\u0CBE\u0C96\u0CB6\u0C95\u0CCD\u0CA4\u0CBF
 controls.choose-character=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0C86\u0CAF\u0CCD\u0C95\u0CC6
 controls.delete-track=\u0CB9\u0CBE\u0CA6\u0CBF \u0C85\u0CB3\u0CBF\u0CB8\u0CC1
-energy.energy=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF(\u0C8E\u0CA8\u0CB0\u0CCD\u0C9C\u0CBF)
-message.paused=\u0C85\u0CA8\u0CBF\u0CAE\u0CC7\u0CB7\u0CA8\u0CCD \u0CA8\u0CBF\u0C82\u0CA4\u0CBF\u0CA6\u0CC6
-help.drag-the-skater=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0CA8\u0CCD\u0CA8\u0CC1 \u0C8E\u0CB3\u0CC6
-controls.friction=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6\u0CAF \u0CB8\u0CB9\u0C97\u0CC1\u0CA3\u0C95(\u0C95\u0CCB\u0C8E\u0CB5\u0CBF\u0CB6\u0CBF\u0CAF\u0C82\u0C9F\u0CCD) 
-interview.name=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF-\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CCD \u0C89\u0CA6\u0CCD\u0CAF\u0CBE\u0CA8\u0CB5\u0CA8\u0CA6 \u0CB8\u0C82\u0CA6\u0CB0\u0CCD\u0CB6\u0CA8 \u0C86\u0CAF\u0CCD\u0C95\u0CC6
-location.jupiter=\u0C97\u0CC1\u0CB0\u0CC1(\u0C9C\u0CC1\u0CAA\u0CBF\u0C9F\u0CB0\u0CCD )
-skater.phet-skater=\u0CAD\u0CBE\u0CB0\u0CA4\u0CC0\u0CAF \u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD
-tracks-menu.item.loop=\u0C86\u0CB5\u0CB0\u0CCD\u0CA4\u0CA8\u0CC6(\u0CB2\u0CC2\u0CAA\u0CCD)
-controls.bounciness=\u0CAA\u0CC1\u0C9F\u0CBF\u0CA6\u0CC7\u0CB3\u0CC1\u0CB5\u0CBF\u0C95\u0CC6
+energy.energy=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF
+message.paused=\u0C85\u0CA8\u0CBF\u0CAE\u0CC7\u0CB7\u0CA8\u0CCD \u0CB5\u0CBF\u0CB0\u0CBE\u0CAE\u0CA6\u0CB2\u0CCD\u0CB2\u0CBF\u0CA6\u0CC6
+help.drag-the-skater=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0C8E\u0CB3\u0CC6
+controls.friction=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6\u0CAF \u0CB8\u0CCD\u0CA5\u0CBF\u0CB0\u0CBE\u0C82\u0C95 
+interview.name=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF-\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CCD \u0C89\u0CA6\u0CCD\u0CAF\u0CBE\u0CA8\u0CB5\u0CA8 \u0CB8\u0C82\u0CA6\u0CB0\u0CCD\u0CB6\u0CA8 \u0C86\u0CAF\u0CCD\u0C95\u0CC6
+location.jupiter=\u0C97\u0CC1\u0CB0\u0CC1
+skater.phet-skater=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD
+translation.credits=<html> \u0CB0\u0CBE\u0CAE\u0C95\u0CC3\u0CB7\u0CCD\u0CA3 \u0CAE\u0CBF\u0CB7\u0CA8\u0CCD, \u0CB6\u0CBF\u0CB5\u0CA8\u0CB9\u0CB3\u0CCD\u0CB3\u0CBF <br>http\://www.rkmission-shivanahalli.org</html>
+tracks-menu.item.loop=\u0C86\u0CB5\u0CB0\u0CCD\u0CA4\u0CA8\u0CC6
+controls.bounciness=\u0CAA\u0CC1\u0C9F\u0CBF\u0CB8\u0CC1\u0CB5\u0CBF\u0C95\u0CC6
 skater.bulldog=\u0CA8\u0CBE\u0CAF\u0CBF
 properties.height=\u0C8E\u0CA4\u0CCD\u0CA4\u0CB0
-controls.gravity=\u0C97\u0CC1\u0CB0\u0CC1\u0CA4\u0CCD\u0CB5(\u0C97\u0CCD\u0CB0\u0CBE\u0CB5\u0CBF\u0C9F\u0CBF)
-message.confirm-reset-title=\u0C96\u0C82\u0CA1\u0CBF\u0CA4\u0CB5\u0CBE\u0C97\u0CBF\u0CAF\u0CC2\!\!
-label.potential-energy-reference=\u0CAA\u0CCD\u0CB0\u0C9A\u0CCD\u0C9B\u0CA8\u0CCD\u0CA8\u0CB6\u0C95\u0CCD\u0CA4\u0CBF\u0CAF \u0C89\u0CB2\u0CCD\u0CB2\u0CC7\u0C96\u0CBF
+controls.gravity=\u0C97\u0CC1\u0CB0\u0CC1\u0CA4\u0CCD\u0CB5
+message.confirm-reset-title=\u0C96\u0C82\u0CA1\u0CBF\u0CA4\u0CB5\u0CBE\u0C97\u0CBF\u0CAF\u0CC2
+label.potential-energy-reference=\u0CAA\u0CCD\u0CB0\u0C9A\u0CCD\u0C9B\u0CA8\u0CCD\u0CA8 \u0CB6\u0C95\u0CCD\u0CA4\u0CBF \u0C89\u0CB2\u0CCD\u0CB2\u0CC7\u0C96
 tracks-menu.item.jump=\u0CA8\u0CC6\u0C97\u0CC6 
 energy.kinetic.energy=\u0C9A\u0CB2\u0CA8\u0CB6\u0C95\u0CCD\u0CA4\u0CBF
-controls.reset-character=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0CA8\u0CCD\u0CA8\u0CC1 \u0CB5\u0CBE\u0CAA\u0CBE\u0CB8\u0CCD\u0CB8\u0CC1 \u0CA4\u0CBE
-help.right-click-for-options=\u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0C97\u0CC6 \u0CB0\u0CC8\u0C9F\u0CCD \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD  \u0CAE\u0CBE\u0CA1\u0CC1
-plots.energy-vs-position-save=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF vs. \u0CB8\u0CCD\u0CA5\u0CBE\u0CA8 (\u0C89\u0CB3\u0CBF\u0CB8\u0CC1 \#
-controls.hide-friction=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6(\u0CAB\u0CCD\u0CB0\u0CBF\u0C95\u0CCD\u0CB7\u0CA8\u0CCD) \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
+controls.reset-character=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0CB5\u0CBE\u0CAA\u0CBE\u0CB8\u0CCD\u0CB8\u0CC1
+help.right-click-for-options=\u0CB9\u0CC6\u0C9A\u0CCD\u0C9A\u0CBF\u0CA8 \u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0C97\u0CC6 \u0CAC\u0CB2 \u0C95\u0CCD\u0CB2\u0CBF\u0C95\u0CCD 
+plots.energy-vs-position-save=\u0CB6\u0C95\u0CCD\u0CA4\u0CBF vs. \u0CB8\u0CCD\u0CA5\u0CB3 (\u0C89\u0CB3\u0CBF\u0CB8\u0CC1 \#
+controls.hide-friction=\u0C98\u0CB0\u0CCD\u0CB7\u0CA3\u0CC6 \u0CAE\u0CB0\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
 controls.add-track=\u0CB9\u0CBE\u0CA6\u0CBF \u0CAC\u0CB0\u0CC6\u0CAF\u0CB2\u0CC1 \u0C8E\u0CB3\u0CC6\u0CAF\u0CBF\u0CB0\u0CBF
 piechart.show=\u0CAA\u0CC8 \u0CA8\u0C95\u0CCD\u0CB7\u0CC6 \u0CA4\u0CCB\u0CB0\u0CBF\u0CB8\u0CC1 
 energy.potential.energy=\u0CAA\u0CCD\u0CB0\u0C9A\u0CCD\u0C9B\u0CA8\u0CCD\u0CA8 \u0CB6\u0C95\u0CCD\u0CA4\u0CBF
-tracks-menu.item.double-well-roller-coaster=\u0CA6\u0CCD\u0CB5\u0CBF\u0CAC\u0CBE\u0CB5\u0CBF \u0CB0\u0CCB\u0CB2\u0CB0\u0CCD \u0C95\u0CCB\u0CB8\u0CCD\u0C9F\u0CB0\u0CCD 
+tracks-menu.item.double-well-roller-coaster=\u0C86\u0CB3\u0CA6 \u0CAC\u0CBE\u0CB5\u0CBF 
 label.zero-potential-energy=\u0C88 \u0C97\u0CC6\u0CB0\u0CC6\u0CAF \u0CAE\u0CC7\u0CB2\u0CC6 PE \= 0
 plots.position.meters=\u0CB8\u0CCD\u0CA5\u0CBE\u0CA8 (meters)
 tracks-menu.item.s-curve=S-\u0CA4\u0CBF\u0CB0\u0CC1\u0CB5\u0CC1
@@ -82,4 +82,4 @@ controls.stop-recording-path=\u0CA8\u0CBF\u0CB2\u0CCD\u0CB2\u0CBF\u0CB8\u0CC1
 controls.measuring-tape=\u0C85\u0CB3\u0CA4\u0CC6 \u0CAA\u0C9F\u0CCD\u0C9F\u0CBF
 location=\u0CB8\u0CCD\u0CA5\u0CB3
 controls.edit-skater=\u0CB8\u0CCD\u0C95\u0CC7\u0C9F\u0CB0\u0CCD \u0CAC\u0CA6\u0CB2\u0CBF\u0CB8\u0CC1
-controls.bring-back=\u0CAE\u0CA4\u0CCD\u0CA4\u0CC6 \u0C95\u0CB0\u0CC6
+controls.bring-back=\u0CAE\u0CA4\u0CCD\u0CA4\u0CC6 \u0CA4\u0CC6\u0C97\u0CC6\u0CA6\u0CC1\u0C95\u0CCA\u0C82\u0CA1\u0CC1 \u0CAC\u0CBE
