circuit-construction-kit: deployed version 3.20.13 (72303) Feb 26, 2013

--- a/simulations-java/simulations/circuit-construction-kit/changes.txt
+++ b/simulations-java/simulations/circuit-construction-kit/changes.txt
@@ -1,3 +1,5 @@
+# 3.20.13 (72303) Feb 26, 2013
+2/26/13 Deploy to dev for review by UBC researchers.
 # 3.20.13 (72297) Feb 26, 2013
 2/26/13 Deploying to dev for review by leader of UBC study.
 Sim Sharing: Removed message sent when popup triggered for wire. This is more consistent with handling of popup menus for other components.
