--- a/trunk/simulations-flash/simulations/faradays-law/data/faradays-law/localization/faradays-law-strings_kn.xml
+++ b/trunk/simulations-flash/simulations/faradays-law/data/faradays-law/localization/faradays-law-strings_kn.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--faradays-law-strings_kn.xml created Tue Nov 08 20:26:37 IST 2011 using: faradays-law 2.02.00 (52648), translation-utility 2.12.00 (57171) Oct 4, 2011-->
+<!--faradays-law-strings_kn.xml created Wed Feb 13 10:39:26 IST 2013 using: faradays-law 2.02.00 (52648), translation-utility 2.14.00 (69024) Oct 10, 2012-->
 <SimStrings>
-<string key="showFieldLines" value="ಕಾಂತೀಯ ಬಲರೇಖೆ"/>
-<string key="oneCoil" value="ಒಂದು ಸುರುಳಿ"/>
-<string key="noSound" value="ಶಬ್ಧ ಬೇಡ"/>
-<string key="moveMe" value="ಕಾಂತವನ್ನು  ಸುರುಳಿಯಲ್ಲಿ ತೂರಿಸು"/>
-<string key="flipMagnet" value="ಧ್ರುವ ಬದಲಿಸು"/>
-<string key="simTitle" value="ಫಾರಡೆ ನಿಯಮ"/>
-<string key="twoCoils" value="ಎರಡು ಸುರುಳಿ"/>
+<string key="twoCoils" value="2 ಸುರುಳಿಗಳು"/>
+<string key="translation.credits" value="&lt;html&gt; ರಾಮಕೃಷ್ಣ ಮಿಷನ್, ಶಿವನಹಳ್ಳಿ &lt;br&gt;http://www.rkmission-shivanahalli.org&lt;/html&gt;"/>
+<string key="noSound" value="ಶಬ್ಧ ಇಲ್ಲ"/>
+<string key="showFieldLines" value="ಕಾರ್ಯ ಕ್ಷೇತ್ರ ಗೆರೆ ತೋರಿಸು"/>
 <string key="voltage" value="ವೋಲ್ಟೇಜ್"/>
+<string key="simTitle" value="ಫಾರಡೆ ನಿಯಮ "/>
+<string key="flipMagnet" value="ಆಯಸ್ಕಾಂತ ಮಗುಚು"/>
+<string key="oneCoil" value="1 ಸುರುಳಿ"/>
+<string key="moveMe" value="ನನ್ನನ್ನು ಎಳೆ"/>
 </SimStrings>
