2/26/2013	nuclear-physics	kn	s.d.murali@gmail.com	Murali S	translation

--- a/simulations-java/simulations/nuclear-physics/data/nuclear-physics/localization/nuclear-physics-strings_kn.properties
+++ b/simulations-java/simulations/nuclear-physics/data/nuclear-physics/localization/nuclear-physics-strings_kn.properties
@@ -1,5 +1,5 @@
-#nuclear-physics-strings_kn.properties created Tue Nov 08 13:04:53 IST 2011 using: nuclear-physics 3.24.00 (51143), translation-utility 2.12.00 (57171) Oct 4, 2011
-#Tue Nov 08 13:04:53 IST 2011
+#nuclear-physics-strings_kn.properties created Wed Jul 11 13:57:59 IST 2012 using: nuclear-physics 3.24.00 (51143), translation-utility 2.12.00 (57171) Oct 4, 2011
+#Wed Jul 11 13:57:59 IST 2012
 DecayTimeChart.Isotope=\u0C90\u0CB8\u0CCA\u0C9F\u0CCB\u0CAA\u0CC1
 beta-decay.name=\u0CAC\u0CC0\u0C9F \u0C95\u0CCD\u0CB7\u0CAF
 SharedLabels.ResetNucleus=\u0CA8\u0CCD\u0CAF\u0CC2\u0C95\u0CCD\u0CB2\u0CBF\u0CAF\u0CB8\u0CA8\u0CCD\u0CA8\u0CC1 \u0CAA\u0CC1\u0CA8\u0CB0\u0CBE\u0CB0\u0C82\u0CAD\u0CBF\u0CB8\u0CC1 
@@ -85,6 +85,7 @@ PotentialProfilePanel.legend.TotalEnergy=\u0C92\u0C9F\u0CCD\u0C9F\u0CC1 \u0CB6\u
 MultipleNucleusFissionControlPanel.ExplosionLabel=\u0CA8\u0CC0\u0CA8\u0CC1 \u0C92\u0C82\u0CA6\u0CC1 \u0C85\u0CA3\u0CC1-\u0CAC\u0CBE\u0C82\u0CAC\u0CCD \u0CA4\u0CAF\u0CBE\u0CB0\u0CBF\u0CB8\u0CBF\u0CB0\u0CC1\u0CB5\u0CC6\!\!
 DatableItem.DeadTree=\u0C92\u0CA3 \u0CAE\u0CB0
 Carbon14Label=\u0C87\u0C82\u0C97\u0CBE\u0CB2-14 
+translation.credits=<html> \u0CB0\u0CBE\u0CAE\u0C95\u0CC3\u0CB7\u0CCD\u0CA3 \u0CAE\u0CBF\u0CB7\u0CA8\u0CCD, \u0CB6\u0CBF\u0CB5\u0CA8\u0CB9\u0CB3\u0CCD\u0CB3\u0CBF <br>http\://www.rkmission-shivanahalli.org</html>
 NuclearPhysicsControlPanel.Lead207Label=\u0CB2\u0CC6\u0CA1\u0CCD-207
 RadiometericMeasurementControlPanel.Title=\u0CB5\u0CB8\u0CCD\u0CA4\u0CC1\u0CB5\u0CA8\u0CCD\u0CA8\u0CC1 \u0C86\u0CAF\u0CCD\u0C95\u0CC6\u0CAE\u0CBE\u0CA1\u0CC1
 RadiometericMeasurement.KillTree=\u0CAE\u0CB0\u0CB5\u0CA8\u0CCD\u0CA8\u0CC1 \u0C95\u0CA4\u0CCD\u0CA4\u0CB0\u0CBF\u0CB8\u0CC1
