updated docs for level-selection/tab branch

--- a/branches/level-selection/simulations-java/simulations/forces-and-motion-basics/changes.txt
+++ b/branches/level-selection/simulations-java/simulations/forces-and-motion-basics/changes.txt
@@ -1,3 +1,4 @@
+Switched to a branch for level-selection & tab mockup development for mobile/touch devices
 Re-enabled clouds for next deploy
 # 1.02.01 (72256) Feb 21, 2013
 Created a development version without clouds
