--- a/simulations-java/simulations/energy-forms-and-changes/todo.txt
+++ b/simulations-java/simulations/energy-forms-and-changes/todo.txt
@@ -1,4 +1,7 @@
 
+From Noah: Try the new background color from tab 1 on tab 2.
+
+Fix: Slow, chunky behavior for the animation.  Something is taking up a lot of time.
 Fix performance issues.
 Fix: Long reset time.
 Fix: Jittery E's in beaker
@@ -7,11 +10,9 @@ Request from NP that I don't yet understand: "can you put the “dashed E’s”
 2nd tab: Allow water temp to reach boiling (verify with NP first, he emailed about this on 1/2/2013).
 
 Fix issues with "systems", i.e. stacks of blocks and so forth.
-
 E's continue into bucket, i.e. don't turn around.
 
 From Noah: Keep the steam the same transparency (if possible) when E's are turned on. (Low priority)
-From Noah: Try the new background color from tab 1 on tab 2.
 
 From Ariel: The three objects if slid horizontally across the floor can "pass through" the heaters.  I think we had discussed making a hard boundary so the objects are only place on the heaters...not a big deal but might be a good finishing touch.
 From Ariel: There is a bit of odd behavior of energy chunks if the water is cooled to "0" and the cooler is left on full throttle.  I think the behavior is easiest to see in "fast forward" mode.  Basically, an energy chunk going to the cooler will sometimes compete with one coming in from the air, bounce around, and reverse direction on occasion.  Whatever fix you came up with for the condition for steaming looks great...energy chunk comes in, energy chunk goes out in a nice equilibrium, but it seems for the near freezing condition there are still some quirks.
