--- a/simulations-java/simulations/energy-forms-and-changes/changes.txt
+++ b/simulations-java/simulations/energy-forms-and-changes/changes.txt
@@ -1,3 +1,4 @@
+Fixed an issue where the beaker on the 2nd tab was unable to make it all the way to the boiling point.
 Changed the background colors to be consistent on both tabs.
 Fixed an issue where energy chunks would appear to "thin out" at the surface of the water when boiling occurred.
 Prevented energy chunks from moving through walls of the beaker when emitted from the water.
